force-app/main/default/objects/Filter_Set_User_Association__c/Filter_Set_User_Association__c.object-meta.xml
<CustomObject>
    <description>Used with Filter_Set__c for the Undergrad and Graduate Advisor Portal; This object stores the many-to-many mapping of which users have access to which filter sets.</description>
    <label>Filter Set User Association</label>
    <nameField>
        <label>Filter Set User Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Set User Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>