force-app/main/default/objects/Filter_Set_User_Association__c/fields/Filter_Set__c.field-meta.xml
<CustomField>
    <fullName>Filter_Set__c</fullName>
    <description>Parent filter set.</description>
    <inlineHelpText>Parent filter set.</inlineHelpText>
    <label>Filter Set</label>
    <referenceTo>Filter_Set__c</referenceTo>
    <relationshipLabel>Filter Set User Associations</relationshipLabel>
    <relationshipName>Filter_Set_User_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>