force-app/main/default/objects/Filter_Set_User_Association__c/fields/Pinned__c.field-meta.xml
<CustomField>
    <fullName>Pinned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this user pinned this filter set?</description>
    <inlineHelpText>Has this user pinned this filter set?</inlineHelpText>
    <label>Pinned</label>
    <type>Checkbox</type>
</CustomField>