force-app/main/default/objects/Filter_Set_User_Association__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which user is this association for?</description>
    <inlineHelpText>Which user is this association for?</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Filter_Set_User_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>